--- a/Android/CreateService/app/src/main/AndroidManifest.xml
+++ b/Android/CreateService/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
         <service
-            android:name=".MyService"
+            android:name=".RunningAppProcessService"
             android:enabled="true"
             android:exported="true" >
         </service>
